<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvinput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/lightgrey"
        android:gravity="end|bottom"
        android:padding="10dp"
        android:text=""
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        tools:ignore="ExtraText">


        <Button
            android:id="@+id/btnseven"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttoncolor"
            android:onClick="ondigit"
            android:text="@string/seven"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="NestedWeights,UsingOnClickInXml,VisualLintBounds,VisualLintButtonSize" />

        <Button
            android:id="@+id/btneight"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttoncolor"
            android:onClick="ondigit"
            android:text="@string/eight"
            android:textColor="@color/white"
            tools:ignore="UsingOnClickInXml,VisualLintBounds,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnnine"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttoncolor"
            android:onClick="ondigit"
            android:text="@string/nine"
            android:textColor="@color/white"
            tools:ignore="UsingOnClickInXml,VisualLintBounds,VisualLintButtonSize" />

        <Button
            android:id="@+id/btndivide"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttoncolor"
            android:onClick="onoperator"
            android:text="@string/divide"
            android:textColor="@color/white"
            tools:ignore="UsingOnClickInXml,VisualLintBounds,VisualLintButtonSize" />




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        tools:ignore="ExtraText">


        <Button
            android:id="@+id/btnsix"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttoncolor"
            android:onClick="ondigit"
            android:text="@string/six"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="NestedWeights,UsingOnClickInXml,VisualLintBounds,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnfive"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttoncolor"
            android:onClick="ondigit"
            android:text="@string/five"
            android:textColor="@color/white"
            tools:ignore="UsingOnClickInXml,VisualLintBounds,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnfour"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttoncolor"
            android:onClick="ondigit"
            android:text="@string/four"
            android:textColor="@color/white"
            tools:ignore="UsingOnClickInXml,VisualLintBounds,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnmulti"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttoncolor"
            android:onClick="onoperator"
            android:text="@string/multiple"
            android:textColor="@color/white"
            tools:ignore="UsingOnClickInXml,VisualLintBounds,VisualLintButtonSize" />




    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_weight="1"
    tools:ignore="ExtraText">


        <Button
            android:id="@+id/btnone"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttoncolor"
            android:onClick="ondigit"
            android:text="@string/one"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="NestedWeights,UsingOnClickInXml,VisualLintBounds,VisualLintButtonSize" />

        <Button
            android:id="@+id/btntwo"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttoncolor"
            android:onClick="ondigit"
            android:text="@string/two"
            android:textColor="@color/white"
            tools:ignore="UsingOnClickInXml,VisualLintBounds,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnthree"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttoncolor"
            android:onClick="ondigit"
            android:text="@string/three"
            android:textColor="@color/white"
            tools:ignore="UsingOnClickInXml,VisualLintBounds,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnsub"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttoncolor"
            android:onClick="onoperator"
            android:text="@string/sub"
            android:textColor="@color/white"
            tools:ignore="UsingOnClickInXml,VisualLintBounds,VisualLintButtonSize" />




</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        tools:ignore="ExtraText">


        <Button
            android:id="@+id/btzero"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttoncolor"
            android:onClick="ondigit"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="NestedWeights,UsingOnClickInXml,VisualLintBounds,VisualLintButtonSize" />
        <Button
            android:id="@+id/btdot"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttoncolor"
            android:onClick="ondecimalview"
            android:text="@string/dot"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="NestedWeights,UsingOnClickInXml,VisualLintBounds,VisualLintButtonSize" />


        <Button
            android:id="@+id/btnclr"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttoncolor"
            android:onClick="unclear"
            android:text="@string/clrs"
            android:textColor="@color/white"
            tools:ignore="UsingOnClickInXml,VisualLintBounds,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnplus"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttoncolor"
            android:onClick="onoperator"
            android:text="@string/plus"
            android:textColor="@color/white"
            tools:ignore="UsingOnClickInXml,VisualLintBounds,VisualLintButtonSize" />






    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        tools:ignore="ExtraText">


        <Button
            android:id="@+id/btequal"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/buttoncolor"
            android:onClick="inequal"
            android:text="@string/equal"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="NestedWeights,UsingOnClickInXml,VisualLintBounds,VisualLintButtonSize" />








    </LinearLayout>


</LinearLayout>
